--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <title>Lab 1</title>
+    </head>
+
+    <body>
+        <p>Web Audio Keyboard</p>
+
+        <div>
+            <form id="wave_selection">
+                <input type="radio" id="sine" value="sine" name="wave" checked="checked">
+                <label for="sine">sine</label>
+                <input type="radio" id="sawtooth" name="wave" value="sawtooth">
+                <label for="sawtooth">sawtooth</label>
+            </form>
+        </div>
+    </body>
+
+    <script src="main.js"></script>
+
+</html>
