added basic animation & one song

--- a/index.html
+++ b/index.html
@@ -3,11 +3,37 @@
 <html>
     <head>
         <title>Lab 1</title>
+        <style>
+            /* Add any additional styling here */
+            canvas {
+                border: 2px solid #000;
+            }
+            .header{
+                display: inline-block;
+                padding-right: 30px;
+            }
+            .header h3 {
+                display: inline; /* or display: inline-block; */
+                margin: 0; /* To remove default margins */
+                font-weight: bold;
+            }
+        </style>
     </head>
 
     <body>
-        <p>Web Audio Keyboard</p>
-
+        <div class="header">
+            <h2>Web Audio Keyboard</h2>
+          
+        </div>
+        <div class="header">
+            <h3>Score: </h3><h3 id="gameScore">0</h3>
+        </div>
+        <br>
+        <button id="startStopButton">Start Game</button>
+        <button id="restartButton">Restart Game</button>
+        <br><br>
+        <canvas id="gameCanvas" width="800" height="600"></canvas>
+        <script src="game.js"></script>
         <div>
             <form id="wave_selection">
                 <input type="radio" id="sine" value="sine" name="wave" checked="checked">
