--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             }
             canvas {
                 border: 2px solid #000;
+                display: block;
+                margin: 20px auto;
             }
             .header{
                 display: inline-block;
@@ -54,7 +56,7 @@
             </div>
             
    
-            <canvas id="gameCanvas" width="800" height="600"></canvas>
+            <canvas id="gameCanvas" width="800" height="400"></canvas>
             <script src="game.js"></script>
             <div>
                 <form id="wave_selection">
